crates/courier-ftp-core/tests/snapshots/unix_listing__unix_fixtures_snapshot@months-spanish.txt.snap
---
source: crates/courier-ftp-core/tests/unix_listing.rs
expression: "Snapshot { used_fallback_encoding: used_fallback, lines: out, }"
input_file: crates/courier-ftp-core/tests/listings/unix/months-spanish.txt
---
used_fallback_encoding: false
lines:
  - line: 1
    outcome: entry
    entry:
      name: enero.txt
      kind: file
      size: 100
      modified: "2024-01-31T12:00:00Z (Minute)"
      permissions: rw-r--r-- (644)
      owner: juan
      group: users
      hidden: false
  - line: 2
    outcome: entry
    entry:
      name: abril.txt
      kind: file
      size: 100
      modified: "2023-04-02T00:00:00Z (Day)"
      permissions: rw-r--r-- (644)
      owner: juan
      group: users
      hidden: false
  - line: 3
    outcome: entry
    entry:
      name: agosto.txt
      kind: file
      size: 100
      modified: "2023-08-15T00:00:00Z (Day)"
      permissions: rw-r--r-- (644)
      owner: juan
      group: users
      hidden: false
  - line: 4
    outcome: entry
    entry:
      name: diciembre.txt
      kind: file
      size: 100
      modified: "2023-12-24T00:00:00Z (Day)"
      permissions: rw-r--r-- (644)
      owner: juan
      group: users
      hidden: false
