crates/courier-ftp-core/tests/snapshots/unix_listing__unix_fixtures_snapshot@months-swedish.txt.snap
---
source: crates/courier-ftp-core/tests/unix_listing.rs
expression: "Snapshot { used_fallback_encoding: used_fallback, lines: out, }"
input_file: crates/courier-ftp-core/tests/listings/unix/months-swedish.txt
---
used_fallback_encoding: false
lines:
  - line: 1
    outcome: entry
    entry:
      name: maj.txt
      kind: file
      size: 100
      modified: "2024-05-01T12:00:00Z (Minute)"
      permissions: rw-r--r-- (644)
      owner: sven
      group: users
      hidden: false
  - line: 2
    outcome: entry
    entry:
      name: oktober.txt
      kind: file
      size: 100
      modified: "2023-10-31T00:00:00Z (Day)"
      permissions: rw-r--r-- (644)
      owner: sven
      group: users
      hidden: false
  - line: 3
    outcome: entry
    entry:
      name: mars.txt
      kind: file
      size: 100
      modified: "2023-03-03T00:00:00Z (Day)"
      permissions: rw-r--r-- (644)
      owner: sven
      group: users
      hidden: false
